# gstreamer-rust

./: Cargo.toml  README.md
assets/: style.css
src/: file_metadata.rs  filters.rs  gstreamer.rs  main.rs  window.rs
